FenicsPDE/MOND/jupyternbs/dolfin_reports/jitfailure-dolfin_expression_c458699a569b2a42032d7e12bec757e8/error.log
/tmp/tmpzhj13s_b/dolfin_expression_c458699a569b2a42032d7e12bec757e8.cpp: In member function ‘virtual void dolfin::dolfin_expression_c458699a569b2a42032d7e12bec757e8::eval(Eigen::Ref<Eigen::Matrix<double, -1, 1> >, Eigen::Ref<const Eigen::Matrix<double, -1, 1> >) const’:
/tmp/tmpzhj13s_b/dolfin_expression_c458699a569b2a42032d7e12bec757e8.cpp:69:86: error: expected primary-expression before ‘;’ token
           values[0] = (pow(x[0],2) + pow(x[1],2) + pow(x[2],2))<=pow(radius_tot, 2) ?;
                                                                                      ^
/tmp/tmpzhj13s_b/dolfin_expression_c458699a569b2a42032d7e12bec757e8.cpp:69:86: error: expected ‘:’ before ‘;’ token
/tmp/tmpzhj13s_b/dolfin_expression_c458699a569b2a42032d7e12bec757e8.cpp:69:86: error: expected primary-expression before ‘;’ token
/tmp/tmpzhj13s_b/dolfin_expression_c458699a569b2a42032d7e12bec757e8.cpp: In member function ‘virtual double dolfin::dolfin_expression_c458699a569b2a42032d7e12bec757e8::get_property(std::__cxx11::string) const’:
/tmp/tmpzhj13s_b/dolfin_expression_c458699a569b2a42032d7e12bec757e8.cpp:81:11: warning: this ‘if’ clause does not guard... [-Wmisleading-indentation]
           if (name == "a") return a;          if (name == "ms") return ms;          if (name == "mgb") return mgb;          if (name == "G") return G;          if (name == "ly") return ly;          if (name == "kp") return kp;          if (name == "radius_tot") return radius_tot;          if (name == "volume_out") return volume_out;
           ^~
/tmp/tmpzhj13s_b/dolfin_expression_c458699a569b2a42032d7e12bec757e8.cpp:81:47: note: ...this statement, but the latter is misleadingly indented as if it were guarded by the ‘if’
           if (name == "a") return a;          if (name == "ms") return ms;          if (name == "mgb") return mgb;          if (name == "G") return G;          if (name == "ly") return ly;          if (name == "kp") return kp;          if (name == "radius_tot") return radius_tot;          if (name == "volume_out") return volume_out;
                                               ^~
